feat: add swagger to product_handlers
